--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,13 +34,19 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-lang3-3.12.0.jar=C:\\Users\\noels\\Documents\\javaLibrary\\commons-lang3-3.12.0\\commons-lang3-3.12.0.jar
+file.reference.jackson-annotations-2.15.0-rc2.jar=C:\\Users\\noels\\Documents\\javaLibrary\\jackson-2.15.0-rc2\\jackson-annotations-2.15.0-rc2.jar
+file.reference.jackson-core-2.15.0-rc2.jar=C:\\Users\\noels\\Documents\\javaLibrary\\jackson-2.15.0-rc2\\jackson-core-2.15.0-rc2.jar
+file.reference.jackson-databind-2.15.0-rc2.jar=C:\\Users\\noels\\Documents\\javaLibrary\\jackson-2.15.0-rc2\\jackson-databind-2.15.0-rc2.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.commons-lang3-3.12.0.jar}
+    ${file.reference.commons-lang3-3.12.0.jar}:\
+    ${file.reference.jackson-annotations-2.15.0-rc2.jar}:\
+    ${file.reference.jackson-core-2.15.0-rc2.jar}:\
+    ${file.reference.jackson-databind-2.15.0-rc2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
